--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,12 @@
   "compilerOptions": {
     "target": "es2020",
     "lib": ["dom", "dom.iterable", "esnext"],
+
+    "baseUrl": ".",                      // ← ADD
+    "paths": {
+      "@/*": ["./*"]                     // ← ADD
+    },
+
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
